# ginger-lib

./: .gitignore  Cargo.toml  Dockerfile
algebra/: Cargo.toml
algebra-ocl/: Cargo.toml
algebra-ocl/src/: lib.rs  tests.rs
algebra-ocl/src/gpu/: mod.rs  nvidia.rs  sources.rs  utils.rs
algebra-ocl/src/gpu/cl/: common.cl  ec.cl  field.cl  field2.cl
algebra-ocl/src/msm/: mod.rs  msm_worker.rs  variable_base.rs
algebra-ocl2/: Cargo.toml  reveng.cl
algebra-ocl2/src/: lib.rs  tests.rs
algebra-ocl2/src/curves/: mod.rs
algebra-ocl2/src/curves/bn_382/: mod.rs  multiexp.rs
algebra-ocl2/src/curves/bn_382/gpu/: locks.rs  mod.rs  multiexp.rs  sources.rs
algebra-ocl2/src/ffgen/: mod.rs  nvidia.rs
algebra-ocl2/src/gpu/: mod.rs  sources.rs  utils.rs
algebra-utils/: Cargo.toml
algebra/benches/: msm.rs
algebra/src/: bytes.rs  lib.rs  to_field_vec.rs
algebra/src/curves/: mod.rs
algebra/src/curves/bls12_377/: g1.rs  g2.rs  mod.rs
algebra/src/curves/bls12_381/: g1.rs  g2.rs  mod.rs
algebra/src/curves/edwards_bls12/: mod.rs
algebra/src/curves/edwards_sw6/: mod.rs
algebra/src/curves/jubjub/: mod.rs
algebra/src/curves/mnt4753/: g1.rs  g2.rs  mod.rs
algebra/src/curves/mnt6/: g1.rs  g2.rs  mod.rs
algebra/src/curves/mnt6753/: g1.rs  g2.rs  mod.rs
algebra/src/curves/models/: mod.rs  short_weierstrass_jacobian.rs  short_weierstrass_projective.rs
algebra/src/curves/sw6/: g1.rs  (+2 more)
algebra/src/fft/: domain.rs
algebra/src/fields/: mod.rs
algebra/src/msm/: variable_base.rs
algebra/src/serialize/: mod.rs
bench-utils/: Cargo.toml
ci/: build.sh  entrypoint.sh
primitives/: Cargo.toml
primitives/benches/crypto_primitives/: poseidon_bench.rs  poseidon_mht.rs
primitives/src/crh/: mod.rs  sbox.rs
primitives/src/signature/: mod.rs
proof-systems/: Cargo.toml
r1cs/core/: Cargo.toml
r1cs/gadgets/crypto/: Cargo.toml
r1cs/gadgets/std/: Cargo.toml
(+134 files in other folders)
